# SSIStoFabric

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  azure-pipelines.yml  migration_config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: debug.prompt.md  deploy.prompt.md  migrate.prompt.md  planner.prompt.md  release.prompt.md  review.prompt.md  test.prompt.md
.github/workflows/: ci.yml  release.yml
.ssis2fabric/: state.json
examples/: README.md
examples/01_simple_copy/: simple_copy.dtsx
examples/02_incremental_load/: incremental_load.dtsx
examples/03_flat_file_import/: flat_file_import.dtsx
examples/04_dimension_load/: dimension_scd2_load.dtsx
examples/05_fact_table_etl/: fact_table_etl.dtsx
examples/06_multi_destination/: multi_destination.dtsx
examples/07_master_data_mgmt/: master_data_management.dtsx
examples/08_data_warehouse_etl/: data_warehouse_etl.dtsx
examples/09_cross_system_sync/: cross_system_sync.dtsx
examples/10_enterprise_etl/: enterprise_etl.dtsx
examples/11_realtime_cdc/: cdc_incremental.dtsx
examples/12_parent_child_packages/: master_orchestrator.dtsx
examples/full_ssis_project/: README.md
examples/full_ssis_project/additional_packages/: DataMining.dtsx  SplitData.dtsx  TermExtractionLookup.dtsx
src/ssis_to_fabric/: __init__.py  api.py  cli.py  config.py  logging_config.py
src/ssis_to_fabric/analyzer/: __init__.py  dtsx_parser.py  lineage.py  models.py
src/ssis_to_fabric/engine/: __init__.py  agents.py  column_lineage.py  connectors.py  csharp_transpiler.py  data_factory_generator.py  data_quality.py  dataflow_generator.py  decomposition.py  deployment_hardening.py  developer_experience.py  enterprise.py  expression_transpiler.py  fabric_deployer.py  gitops.py  integrations.py  intelligence.py  lakehouse_provisioner.py  lineage.py  metadata_catalog.py  migration_engine.py  migration_validator.py  orchestration.py  performance.py  plugin_registry.py  policy_engine.py  report_generator.py  script_transpiler.py  spark_generator.py  ssisdb_extractor.py  streaming.py  utils.py  web_dashboard.py
src/ssis_to_fabric/testing/: __init__.py  quality.py  regression_runner.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/fixtures/sample_packages/: Project.params  complex_etl.dtsx  parent_child.dtsx  simple_etl.dtsx
tests/regression/: test_non_regression.py
tests/regression/baselines/notebooks/: CascadingLookup_Resolve_Client_Data.py  CustomWebServiceSource_Airport_Information.py  DataMatching_Data_Flow_Task.destinations.json  DataMatching_Data_Flow_Task.py  DataMining_Data_Flow_Task.py  ExecutionTrees_dft_DW_DimOrderProvenance.destinations.json  ExecutionTrees_dft_DW_DimOrderProvenance.py  FileSizes_FilesBySize.py  FileSizes_ShowFileNames.py  LookupCache_Load_Person_Cache.py  LookupCache_Resolve_Client_Data.py  LookupExpression_Resolve_Client_Data.destinations.json  LookupExpression_Resolve_Client_Data.py  ProcessingExcel_ProcessExcelOrders.py  RegExValidation_ReadPatterns.py  RegExValidation_Validate_Person_Data.py  SplitData_SplitData.destinations.json  SplitData_SplitData.py  StgAddress_dft_Staging_StgAddress.destinations.json  StgAddress_dft_Staging_StgAddress.py  StgCustomerAddress_dft_Staging_CustomerAddress.destinations.json  StgCustomerAddress_dft_Staging_CustomerAddress.py  StgCustomer_dft_Staging_StgCustomer.destinations.json  StgCustomer_dft_Staging_StgCustomer.py  StgProductCategory_dft_Staging_StgProductCategory.destinations.json  StgProductCategory_dft_Staging_StgProductCategory.py  StgProductDescription_dft_Staging_StgProductDescription.destinations.json  StgProductDescription_dft_Staging_StgProductDescription.py  StgProductModelProductDescription_dft_Staging_StgProductModelProductDescription.py  (+15 more)
tests/unit/: test_agents.py  test_api.py  test_automation_features.py  test_cli.py  test_code_review_fixes.py  test_config.py  test_data_factory_generator.py  test_data_sources.py  test_dataflow_generator.py  test_dtsx_parser.py  test_feature_batch2.py  test_lineage.py  test_migration_engine.py  test_new_features.py  test_parameters_parent_child.py  test_phase10_advanced.py  test_phase11_column_lineage.py  test_phase12_deployment.py  test_phase13_quality.py  test_phase14_integrations.py  test_phase15_enterprise.py  test_phase16_devex.py  test_phase17_data_quality.py  test_phase18_gitops.py  test_phase19_dashboard.py  test_phase20_streaming.py  test_phase21_script.py  test_phase22_orchestration.py  test_phase23_policy.py  test_phase24_performance.py  test_phase25_connectors.py  test_phase26_intelligence.py  test_phase27_decomposition.py  test_phase28_validation.py  test_phase29_catalog.py  test_phase5_features.py  test_phase6_features.py  test_phase7_observability.py  test_phase8_expressions.py  test_phase9_plugins.py  (+1 more)
(+28 files in other folders)
