[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssis-to-fabric"
version = "1.0.0"
description = "Production-ready migration tool: SSIS packages to Microsoft Fabric (Data Factory pipelines & Spark notebooks)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Migration Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "lxml>=4.9",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "rich>=13.0",
    "click>=8.1",
    "azure-identity>=1.15",
    "deepdiff>=6.7",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pytest-html>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
ssisdb = [
    "pyodbc>=5.0",
]
regression = [
    "pandas>=2.1",
]

[project.scripts]
ssis2fabric = "ssis_to_fabric.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require connections)",
    "regression: Non-regression tests (compare outputs)",
    "e2e: End-to-end migration tests",
]
